[tool.poetry]
name = "eapix"
version = "0.7.0"
description = ""
authors = ["Jesse Mather <jmather@arista.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.12.0"
click = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
eapix = "eapix.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
