[tool.poetry]
name = "eapix"
version = "0.9.0"
description = ""
authors = ["Jesse Mather <jmather@arista.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27"
click = "^8.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"
mypy = "^1.9"
pytest = "^8.0"
pytest-asyncio = "^0.23"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
eapix = "eapix.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
